[package]
name = "program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.6.0"
solana-program = "2.2.0"
spl-token = { version="4.0.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="2.0.0", features = [ "no-entrypoint" ] }
mpl-token-metadata = "1.11"
spl-associated-token-account-interface = "2.0.0"

[dev-dependencies]
litesvm = "0.6.1"
solana-sdk = "2.2.0"
