[package]
name = "biodex"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "0.9.3"
constant_time_eq = "0.3"
solana-program = "1.18.26"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.18.26"
tokio = { version = "1.28", features = ["full"] }
solana-sdk = "1.18.26"

# [profile.release]
# overflow-checks = true
# lto = "fat"
# codegen-units = 1

[target.'cfg(target_arch = "bpf")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[[test]]
name = "integration_tests"
path = "tests/mod.rs"
